--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=WebSite-YanHua
+
+spring.datasource.url = jdbc:mysql://localhost:3306/bd_saui
+
+spring.datasource.username = root
+spring.datasource.password = 123456
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
